--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <section>
     <img id="logo" src="logo.png" alt="A logo that contains the word 'Git'" />
     <h1>Git & GitHub Crash Course</h1>
     <p>Because the basics are important!</p>
+  </section>
   </body>
 </html>
 <p> hello my name is awais </p>
